--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
     </div>
     <p class="text-center m-5">
-      Featured Project which my best projects are chosen to be shown
+      Featuring the best projects of my choice to show
     </p>
     <div class="container">
       <div class="row mb-5">
