--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Anna is a front-end engineer based in Brazil."
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -26,31 +30,35 @@
       rel="stylesheet"
     />
 
-    <title>Document</title>
+    <title>Front-end developer - Anna Luiza Britto</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
-          <img src="images/logo.png" class="logo d-none d-md-block" alt="" />
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="Anna Logo"
+          />
           <img
             src="images/logo-small.jpg"
             class="logo d-block d-md-none"
-            alt=""
+            alt="Anna Logo"
           />
         </a>
         <ul>
           <li class="active">
-            <a href="/">Home</a>
+            <a href="/" title="Homepage">Home</a>
           </li>
           <li>
-            <a href="/about.html">About</a>
+            <a href="/about.html" title="About Anna">About</a>
           </li>
           <li>
-            <a href="/work.html">Work</a>
+            <a href="/work.html" title="Anna's Work">Work</a>
           </li>
           <li>
-            <a href="/contact.html">Contact</a>
+            <a href="/contact.html" title="Contact Anna">Contact</a>
           </li>
         </ul>
       </nav>
@@ -60,7 +68,9 @@
       <h1>Anna Luiza Britto</h1>
       <h2 class="mb-5">Front-end developer based in Brazil</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="/contact.html" class="btn btn-branding" title="Contact me"
+          >Contact me</a
+        >
       </div>
     </div>
     <p class="text-center m-5">
@@ -69,7 +79,11 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/yogurt.png" class="img-fluid" alt="" />
+          <img
+            src="images/yogurt.png"
+            class="img-fluid"
+            alt="Yogurt project preview"
+          />
         </div>
         <div class="col-6">
           <div class="project-description">
@@ -80,7 +94,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline"
+            <a href="/work.html" class="btn btn-branding-outline"
               >View detailed project</a
             >
           </div>
@@ -96,18 +110,26 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline"
+            <a href="/work.html" class="btn btn-branding-outline"
               >View detailed project</a
             >
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/weather.png" class="img-fluid" alt="" />
+          <img
+            src="images/weather.png"
+            class="img-fluid"
+            alt="Weather project preview"
+          />
         </div>
       </div>
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/dictionary.png" class="img-fluid" alt="" />
+          <img
+            src="images/dictionary.png"
+            class="img-fluid"
+            alt="Dictionary app preview"
+          />
         </div>
         <div class="col-6">
           <div class="project-description">
@@ -118,7 +140,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline"
+            <a href="/work.html" class="btn btn-branding-outline"
               >View detailed project</a
             >
           </div>
@@ -129,29 +151,52 @@
           class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
         >
           <div>
-            <h4>Work Inquiry</h4>
+            <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding">Contact me</a>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="Contact Anna"
+              >Contact me</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:annaluizabritto@gmail.com" class="email-link"
+          <a
+            href="mailto:annaluizabritto@gmail.com"
+            class="email-link"
+            title="Email Anna"
             >annaluizabritto@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center mb-5">
-          <a href="https://www.github.com/anna7b" target="_blank"
+          <a
+            href="https://www.github.com/anna7b"
+            target="_blank"
+            title="GitHub Profile"
             ><i class="fa-brands fa-github"></i
           ></a>
-          <a href="https://www.instagram.com/annasinsta" target="_blank"
+          <a
+            href="https://www.instagram.com/annasinsta"
+            target="_blank"
+            title="Instagram Profile"
             ><i class="fa-brands fa-instagram"></i
           ></a>
-          <a href="https://www.twitter.com/annastwitter" target="_blank"
+          <a
+            href="https://www.twitter.com/annastwitter"
+            target="_blank"
+            title="Twitter Profile"
             ><i class="fa-brands fa-twitter"></i
           ></a>
         </div>
+        <p class="text-center mt-5">
+          🫰This project was coded SheCodes, and it's
+          <a href="https://github.com/anna7b/portfolio-project" target="_blank">
+            open-sourced</a
+          >
+        </p>
       </footer>
     </div>
   </body>
