--- a/work.html
+++ b/work.html
@@ -10,6 +10,10 @@
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Anna's work. Anna is a front-end engineer based in Brazil."
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -26,35 +30,81 @@
       rel="stylesheet"
     />
 
-    <title>Document</title>
+    <title>Anna's work - Anna Luiza Britto</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="Anna Logo"
+          />
+          <img
+            src="images/logo-small.jpg"
+            class="logo d-block d-md-none"
+            alt="Anna Logo"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/" title="Homepage">Home</a>
+          </li>
+          <li>
+            <a href="/about.html" title="About Anna">About</a>
+          </li>
+          <li class="active">
+            <a href="/work.html" title="Anna's Work">Work</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Contact Anna">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
 
         <div class="row">
           <div class="col-md-6 mb-4">
-            <img src="images/yogurt.png" class="img-fluid mb-3" alt="" />
+            <img
+              src="images/yogurt.png"
+              class="img-fluid mb-3"
+              alt="Yogurt project preview"
+            />
             <h3 class="text-center m-0">Yogurt Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
           <div class="col-md-6 mb-4">
-            <img src="images/weather.png" class="img-fluid mb-3" alt="" />
+            <img
+              src="images/weather.png"
+              class="img-fluid mb-3"
+              alt="Weather project preview"
+            />
             <h3 class="text-center m-0">Weather Project</h3>
             <p class="text-center text-muted">
               Built with HTML, CSS and JavaScript
             </p>
           </div>
           <div class="col-md-6 mb-4">
-            <img src="images/dictionary.png" class="img-fluid mb-3" alt="" />
+            <img
+              src="images/dictionary.png"
+              class="img-fluid mb-3"
+              alt="Dictionary app preview"
+            />
             <h3 class="text-center m-0">Dictionary App</h3>
             <p class="text-center text-muted">
               Built with HTML, CSS with React
             </p>
           </div>
           <div class="col-md-6 mb-4">
-            <img src="images/translation.png" class="img-fluid mb-3" alt="" />
+            <img
+              src="images/translation.png"
+              class="img-fluid mb-3"
+              alt="Translation app preview"
+            />
             <h3 class="text-center m-0">Translation App</h3>
             <p class="text-center text-muted">
               Built with HTML, CSS with React
@@ -63,5 +113,57 @@
         </div>
       </div>
     </div>
+    <footer class="container">
+      <div
+        class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+      >
+        <div>
+          <h3>Work Inquiry</h3>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-branding mt-3"
+            title="Contact Anna"
+            >Contact me</a
+          >
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="mailto:annaluizabritto@gmail.com"
+          class="email-link"
+          title="Email Anna"
+          >annaluizabritto@gmail.com</a
+        >
+      </div>
+      <div class="social-links d-flex justify-content-center mb-5">
+        <a
+          href="https://www.github.com/anna7b"
+          target="_blank"
+          title="GitHub Profile"
+          ><i class="fa-brands fa-github"></i
+        ></a>
+        <a
+          href="https://www.instagram.com/annasinsta"
+          target="_blank"
+          title="Instagram Profile"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+        <a
+          href="https://www.twitter.com/annastwitter"
+          target="_blank"
+          title="Twitter Profile"
+          ><i class="fa-brands fa-twitter"></i
+        ></a>
+      </div>
+      <p class="text-center mt-5">
+        🫰This project was coded SheCodes, and it's
+        <a href="https://github.com/anna7b/portfolio-project" target="_blank">
+          open-sourced</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
